выключил font awesome

--- a/less/index.less
+++ b/less/index.less
@@ -66,6 +66,8 @@
 // Utility classes
 @import "bootstrap/utilities.less"; // Has to be last to override when necessary
 
+// Font-Awesome
+//@import "font-awesome/font-awesome.less";
 
 
 // Standart-N
