--- a/less/font-awesome/font-awesome-ie7.less
+++ b/less/font-awesome/font-awesome-ie7.less
@@ -79,7 +79,7 @@ ul.icons {
 
 
 .ie7icon(@inner) {
-  *zoom: ~"expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '@{inner}')";
+  *zoom: "expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '@{inner}')";
 }
 
 .icon-glass                { .ie7icon('&#xf000;'); }
