--- a/less/index.less
+++ b/less/index.less
@@ -28,7 +28,7 @@
 @import "bootstrap/tables.less";
 
 // Components: common
-@import "bootstrap/sprites.less";
+//@import "bootstrap/sprites.less";
 @import "bootstrap/dropdowns.less";
 @import "bootstrap/wells.less";
 @import "bootstrap/component-animations.less";
@@ -67,7 +67,7 @@
 @import "bootstrap/utilities.less"; // Has to be last to override when necessary
 
 // Font-Awesome
-//@import "font-awesome/font-awesome.less";
+@import "font-awesome/font-awesome.less";
 
 
 // Standart-N
