обновление, слияние с последними проектами

--- a/layout/smarty/signin.jade
+++ b/layout/smarty/signin.jade
@@ -6,7 +6,7 @@
 				.row-fluid
 					.span10.offset1
 
-						#signin-error
+						#signin-error.hide
 							.alert.alert-error
 								button.close(type = "button", data-dismiss = "alert") &times;
 								strong Ошибка!
